// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "DatumRequestProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "esi-time-concept.proto";
import "esi-time-unit.proto";
import "esi-timestamp-range.proto";

// Request criteria for datum.
message DatumRequest {

  oneof time_style_oneof {
    
    // A date range.
    TimestampRange time_range = 1;
    
    // A conceptual time.
    TimeConcept time_concept = 2;
  
  }

  // The requested time unit of the resulting datum.
  TimeUnit time_unit = 3;
  
  // The requested coalescence of time units, for example for 5-minute time spans then
  // time_unit_coalescence = 5 and time_unit = MINUTE. A value of 0 or 1 mean no coalescing is
  // requested.
  uint32 time_unit_coalescence = 4;
  
}
