// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "PowerProfileDatumProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "google/protobuf/timestamp.proto";
import "esi-power-components.proto";
import "esi-time-unit.proto";

// Power components associated with a date or time span.
message PowerProfileDatum {

  // The start date of this power profile (inclusive).
  google.protobuf.Timestamp ts = 1;
  
  // The length of `time_unit` units of time this datum covers, starting from `ts`.
  uint32 time_length = 2;

  // The time unit used by `time_length`.
  TimeUnit time_unit = 3;
  
  // The power components of this datum.
  PowerComponents power_components = 4;
  
}
