// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "PriceMapOfferResponseProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "esi-price-map.proto";
import "esi-uuid.proto";

// An offer on a price map.
message PriceMapOfferResponse {

  // The globally unique ID of this offer.
  Uuid offer_id = 1;

  // Either the offer is accepted, rejected, or a counter-offer is proposed.
  oneof accept_oneof {
    // An accept/reject flag.
    bool accept = 2;
    
    // The price map on offer.
    PriceMap counter_offer = 3;
  }

}
