// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "PowerParametersProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "solarnetwork/esi/domain/float_range.proto";
import "solarnetwork/esi/domain/signed_int32_range.proto";

// Parameters relating to power characteristics.
message PowerParameters {

  // The voltage range, in volts (V).
  SignedInt32Range voltage_range = 1;

  // The power factor range.
  FloatRange power_factor_range = 2;

  // The frequency range, in hertz (Hz).
  SignedInt32Range frequency_range = 3;

}
